# shimpz-core

./: README.md
app-egress/: Dockerfile  app.py  audit.py  healthcheck.py
apps/: Dockerfile  app.py  audit.py  caddy_routes.py  egress_lock.py  manifests.py  pyproject.toml  stdlib_http.py  token_store.py  validate.py
apps/tests/: test_http_security.py  test_manifests.py  test_stdlib_http.py
bus/: Dockerfile  app.py  audit.py  bus_client.py  healthcheck.py  token_store.py  validate.py
capsule/: Dockerfile  Dockerfile.local  LOCAL_CONTROLLER.md  accounts_client.py  app.py  assistant_chat.py  brain_credentials_client.py  brain_runtime_token_store.py  capsule_storage.py  chat_orchestrator.py  cleanup_state.py  healthcheck.py  inference_config.py  local_app.py  local_audit.py  local_healthcheck.py  local_registry.py  local_token_store.py  manifests.py  marketplace.py  network_policy.py  pgdriver_client.py  pyproject.toml  validate.py
cf/: Dockerfile  app.py  audit.py  cf_client.py  healthcheck.py  token_store.py  validate.py
egress/: Dockerfile  app.py  audit.py  healthcheck.py
openai/: Dockerfile  app.py  audit.py  healthcheck.py  oa_client.py  token_store.py  validate.py
pg/: Dockerfile  app.py  audit.py  driver_manifest.py  healthcheck.py  pg_client.py  principal_store.py  shimpz.driver.toml  stdlib_http.py  token_store.py  validate.py
r2/: Dockerfile  app.py  audit.py  backup_gate.py  credential_bundle.py  credential_store.py  driver_manifest.py  healthcheck.py  principal_store.py  pyproject.toml  r2_client.py  shimpz.credentials.json  shimpz.driver.toml  (+2 more)
(+193 files in other folders)
