[project]
name = "shimpz-driver"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    # Pinned EXACT — SECURITY_ENGINEERING_PLAN.md item 6: an open range (`>=7.1.0`) lets any future
    # release install silently on the next rebuild. Must match the literal `uv pip install
    # docker==...` in Dockerfile (this file is documentation for humans; the Dockerfile's own
    # install command is what actually runs at build time and is the one that must be pinned).
    "docker==7.1.0",
]

[tool.uv]
package = false
